--- a/client/src/style.css
+++ b/client/src/style.css
@@ -24,7 +24,7 @@ h3 {
 
 .header {
     background-color: antiquewhite;
-    height: 75px;
+    height: 50px;
 }
 
 form {
@@ -106,6 +106,12 @@ p {
 .nav-item {
     display: inline-block;
     color: azure;
+}
+
+.nav-item a {
+    color: azure; 
+    height: 30px;
+    margin: 7px;
 }
 
 .information {
