--- a/client/src/style.css
+++ b/client/src/style.css
@@ -21,7 +21,9 @@ h3 {
     margin-bottom: 10px;
 }
 
-
+h4 {
+    margin-top: 10px;
+}
 
 .header {
     background-color: azure;
@@ -32,6 +34,7 @@ form {
     border-color: black;
     border-radius: 5px;
     border-width: thick;
+    background-color: cornflowerblue;
 }
 
 input {
@@ -39,6 +42,8 @@ input {
     margin-right: 15%;
     margin-top: 20px;
     margin-bottom: 20px;
+    width: 70%;
+    height: 30px;
     border-radius: 2px;
 }
 
@@ -86,22 +91,28 @@ p {
     background-color: cornflowerblue;
     display: inline-block;
     min-width: 40%;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .card img {
-    min-height: 80%;
-    margin-top: 10%;
-    margin-bottom: 10%;
+    margin-top: 10px;
+    margin-bottom: 10px;
     border-radius: 2px;
     margin-left: 10%;
+    margin-right: 5%;
     float: left;
+    max-height: 150px;
+}
+
+.card p {
+    margin-right: 10%;
 }
 
 .static-img {
     margin-left: 10%;
     float: right;
+    max-height: 200px;
 }
 
 .nav-item {
